k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gnani-production
  labels:
    name: gnani-production
